ensure that the animated hamburger menu doesn't add horizontal scroll to the page

--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@
     font-family: var(--ff-body);
     line-height: 1.6;
     scroll-padding: 10rem;
+    overflow-x: clip;
   }
 
   @media (prefers-reduced-motion: no-preference) {
